@@ -147,9 +147,6 @@ if [ -n "$LIVECD_LANGS" ]; then
 fi
 
 if [ "$RUN_MANUAL_CUSTOMIZATIONS" = "yes" ] ; then
-	#Create DBUS uuid so that KDE4 apps work.
-	echo "Creating DBUS uuid"
-	dbus-uuidgen --ensure
 	while true ; do
 		CHOICE_PACKAGE_MANAGER="Run package manager"
 		CHOICE_CONSOLE="Run console application"
